--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "react-scripts build",
     "lint": "eslint .",
     "preview": "vite preview"
+    
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-scripts": "^3.0.1"
   }
 }
